# Drone_Project

./: .gitignore  README.md
backend/: CMakeLists.txt  Makefile  config.json
backend/include/: distance.h  distance.hpp  grasp.h  grasp.hpp  http_server.h  simulation.h  simulation.hpp  state_logger.hpp  thread_pool.h  types.h
backend/src/: distance.cpp  grasp.cpp  http_server.cpp  main.cpp  simulation.cpp  state_logger.cpp  thread_pool.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.jsx
frontend/src/components/: AddCustomerModal.jsx  ControlPanel.jsx  EventLog.jsx  Legend.jsx  SimulationMap.jsx  StatsPanel.jsx
frontend/src/utils/: api.js  geometry.js
